objects/Opportunity_Benefit__c.object
<CustomObject><fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <referenceTo>Benefit__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Benefits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Unit_Value__c</fullName>
        <label>Unit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>Opportunity Benefit</label><nameField>
        <displayFormat>OB-{0000}</displayFormat>
        <label>Opportunity Benefit Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Opportunity Benefits</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>